--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/uuid": "^8.3.3",
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "firebase-admin": "^10.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.2",
     "uuid": "^8.3.2"
   }
 }
