--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.0.1",
     "firebase-admin": "^10.0.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^9.1.3",
     "nodemailer": "^6.7.2",
     "uuid": "^8.3.2"
   }
