--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/google-spreadsheet": "^3.1.5",
     "@types/uuid": "^8.3.3",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.15",
@@ -19,8 +20,10 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "firebase-admin": "^10.0.1",
+    "google-spreadsheet": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.1.3",
     "nodemailer": "^6.7.2",
