--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
+    "express": "^4.17.2",
     "firebase-admin": "^10.0.1",
     "google-spreadsheet": "^3.2.0",
+    "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.1.3",
     "nodemailer": "^6.7.2",
