--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,12 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "start": "ts-node index.ts",
-    "install-all": "cd ../frontend && echo ## INSTALLING FRONTEND DEPENDENCIES ## && npm install && cd ../server && echo ## INSTALLING BACKEND DEPENDENCIES ## && npm install",
+    "dev": "ts-node index.ts ../../.dev_env dev",
     "build": "tsc",
-    "build-all": "cd ../frontend && echo ## BUILDING REACT FRONTEND ## && npm install && npm run build && cd ../server && echo ## BUILDING EXPRESS BACKEND ## && npm install && npm run build",
-    "build-and-run-all": "npm run build-all && cd dist && node index.js"
+    "prod": "npm run build && cd dist && node index.js ../../../.env prod",
+    "install-all": "cd ../frontend && echo INSTALLING FRONTEND DEPENDENCIES && npm install && cd ../server && echo INSTALLING BACKEND DEPENDENCIES && npm install",
+    "build-all": "cd ../frontend && echo BUILDING REACT FRONTEND && npm install && npm run build && cd ../server && echo BUILDING EXPRESS BACKEND && npm install && npm run build",
+    "build-and-run-all": "npm run build-all && cd dist && node index.js ../../../.env prod"
   },
   "keywords": [],
   "author": "",
