--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Install Node Dependencies
         run: cd ./server && npm install
 
+      - name: Create .env file
+        run: echo ${{secrets.ENV_FILE}} > .env
+
       - name: Build
         run: CI=false && cd ./server && npm run build-all
 
