--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Build
         run: CI=false && cd ./server && npm run build-all
 
+      - name: Display Build Results
+        run: ls -a
+
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
