--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "scripts": {
-    "start": "cd ./server/dist && node index.js"
+    "start": "cd ./server && npm run build-and-run-all"
   }
 }
