--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,14 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "simple-forms"
           heroku_email: "dominic.fernandez1023@gmail.com"
+          justlogin: true
           buildpack: "https://github.com/heroku/heroku-buildpack-nodejs.git"
+      - run: |
+          heroku login
+          git init
+          heroku git:remote -a simple-forms
+          git remote add origin https://github.com/dcfernandez1023/form-builder.git
+          git pull origin master
+          git add .
+          git commit -m "heroku deploy commit"
+          git push heroku master
