--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,20 +9,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12
+      - name: Checkout Branch
+        uses: actions/checkout@v2
+
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16.13.1
+
+      - name: Build
+        run: CI=false && cd ./server && npm run build-all
+
+      - name: Display Build Results
+        run: ls -a
+
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "simple-forms"
           heroku_email: "dominic.fernandez1023@gmail.com"
-          justlogin: true
           buildpack: "https://github.com/heroku/heroku-buildpack-nodejs.git"
-      - run: |
-          heroku login
-          git init
-          heroku git:remote -a simple-forms
-          git remote add origin https://github.com/dcfernandez1023/form-builder.git
-          git pull origin master
-          git add .
-          git commit -m "heroku deploy commit"
-          git push heroku master
