--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "scripts": {
-    "start": "cd ./server && npm run build-and-run-all"
-  }
+    "start": "cd ./server && npm run start-prod",
+    "postinstall": "cd ./server && npm run build-all",
+    "deploy": "git add . && git commit -m Heroku && git push heroku master"
+  },
+  "engines": { "node": "16.13.1" }
 }
