--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "tsc": "tsc",
     "start": "cd ./server && npm run start-prod",
     "postinstall": "cd ./server && npm run build-all",
     "deploy": "git add . && git commit -m Heroku && git push heroku master"
