--- a/server/package.json
+++ b/server/package.json
@@ -19,13 +19,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/google-spreadsheet": "^3.1.5",
-    "@types/uuid": "^8.3.3",
+    "@types/uuid": "^8.3.4",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/google-spreadsheet": "^3.1.5",
+    "@types/uuid": "^8.3.4",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
