--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "postinstall": "cd ./server && npm run build-prod",
     "deploy": "node initHerokuEnvironment.js && git add . && git commit -m Heroku && git push heroku master"
   },
-  "engines": { "node": "16.13.1" }
+  "engines": {
+    "node": "16.13.1",
+    "npm": "8.3.0"
+  }
 }
