--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/google-spreadsheet": "^3.1.5",
+    "@types/uuid": "^8.3.4",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
