--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,20 @@
     "build-prod": "npm install -g typescript && npm run build-all",
     "install-all": "cd ../frontend && echo INSTALLING FRONTEND DEPENDENCIES && npm install && cd ../server && echo INSTALLING BACKEND DEPENDENCIES && npm install",
     "build-all": "cd ../frontend && echo BUILDING REACT FRONTEND && npm install && npm run build && cd ../server && echo BUILDING EXPRESS BACKEND && npm install && npm ls --depth=0 && npm run build",
-    "build-and-run-all": "npm run build-all && cd dist && node index.js ../../../.env prod"
+    "build-and-run-all": "npm run build-all && cd dist && node index.js ../../../.env prod",
+    "test": "mocha -r ts-node/register test/**/test.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.3.0",
     "@types/google-spreadsheet": "^3.1.5",
+    "@types/mocha": "^9.0.0",
     "@types/uuid": "^8.3.4",
+    "chai": "^4.3.4",
     "dotenv": "^10.0.0",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
@@ -34,7 +39,6 @@
     "google-spreadsheet": "^3.2.0",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^9.1.3",
     "nodemailer": "^6.7.2",
     "uuid": "^8.3.2"
   }
