--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-windows": "react-scripts build && move ./build ../dist/frontend",
+    "build-linux": "react-scripts build && mv ./build ../dist/frontend",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
