--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.4",
+    "bcrypt": "^5.0.1",
     "dotenv": "^14.1.0",
     "firebase-admin": "^10.0.1",
+    "jsonwebtoken": "^8.5.1",
     "uuid": "^8.3.2"
   },
   "scripts": {
